# Highway_Topo_Poc

./: .gitignore  AGENTS.md  Makefile  SPEC.md  pyproject.toml
configs/: pipeline.example.yaml
docs/: AGENT_PLAYBOOK.md  ARTIFACT_PROTOCOL.md  CODEX_GUARDRAILS.md  CODEX_START_HERE.md  PROJECT_BRIEF.md  WORKSPACE_SETUP.md  codebase-research.md  t05_new_thread_startup_a8b2255.md  t05_new_thread_startup_e3e58fc.md
modules/: __init__.py
scripts/: pull_and_run_t10_sh_manual_mode.sh  run_t04_patch_auto_nodes.sh  run_t05_full_wsl.sh  run_t05_topology_between_rc_smoke.py  run_t05v2_full_wsl.sh  run_t10_sh_manual_mode.sh  t05_build_result_doc.py  t05_collect_patch_diag.sh  t05_collect_step01_metrics.sh  t05_diag_step1_multi_corridor.sh  t05_diag_step2_barrier.sh  t05_extract_audit_fix_round1.py  t05_extract_final_geometry_trace.py  t05_extract_global_fit_trace.py  t05_extract_global_fit_v2_trace.py  t05_extract_simplepatch_connector_audit.py  t05_pair_check.py  t05_pull_and_regress.sh  t05_regress_modified_pairs.sh  t05_resume.sh  t05_step0_xsec_gate.sh  t05_step1_shape_ref.sh  t05_step2_xsec_road.sh  t05_step3_build_road.sh  t05_step4_gate_export.sh  t05_step_common.sh  t05_v2_alias_fix_and_rootcause_push_review.py  t05_v2_arc_first_attach_evidence_review.py  t05_v2_arc_legality_fix_review.py  t05_v2_arc_obligation_closure_review.py  t05_v2_bridge_trial_review.py  t05_v2_competing_arc_closure_review.py  t05_v2_geometry_refine_complexpatch.sh  t05_v2_geometry_refine_simplepatch.sh  t05_v2_geometry_refine_simplepatch_extract.py  t05_v2_legal_arc_coverage_review.py  (+19 more)
(+392 files in other folders)
